--- a/environment.yml
+++ b/environment.yml
@@ -13,3 +13,4 @@ dependencies:
   - vs2015_runtime=14.27.29016=h5e58377_2
   - wheel=0.36.2=pyhd3eb1b0_0
   - wincertstore=0.2=py38_0
+prefix: C:\Users\alber\anaconda3\envs\ECSDI
