--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,8 @@ flask-restful
 requests=2.25.1
 rdflib==5.0.0
 SPARQLWrapper==1.8.5
+numpy==1.20.3
+matplotlib==3.4.2
+amadeus
+foursquare
+pif==0.8.2
