--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 multiprocess==0.70.11.1
 flask==2.0.0
 flask-restful
-requests=2.25.1
+requests==2.25.1
 rdflib==5.0.0
 SPARQLWrapper==1.8.5
 numpy==1.20.3
